--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cordova-plugin-geolocation": "4.0.2",
     "cordova-plugin-googleplus": "8.2.0",
     "cordova-plugin-inappbrowser": "3.1.0",
+    "cordova-plugin-keyboard": "1.2.0",
     "cordova-plugin-media": "5.0.3",
     "cordova-plugin-media-capture": "3.0.3",
     "cordova-plugin-nativegeocoder": "3.2.2",
@@ -79,7 +80,6 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -107,7 +107,6 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-streaming-media": {},
       "cordova-plugin-media-capture": {},
       "cordova-plugin-media": {},
@@ -126,7 +125,8 @@
       "cordova-open-native-settings": {},
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-keyboard": {}
     },
     "platforms": [
       "android"
