--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ionic-native/network": "^5.28.0",
     "@ionic-native/onesignal": "^5.20.0",
     "@ionic-native/open-native-settings": "^5.16.0",
+    "@ionic-native/social-sharing": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/streaming-media": "^5.15.1",
@@ -76,7 +77,9 @@
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-streaming-media": "2.2.0",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.2",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "^7.7.0",
     "ionic-cache": "^4.1.0",
     "jquery": "^3.4.1",
@@ -161,7 +164,8 @@
       "cordova-plugin-badge": {},
       "call-number": {},
       "cordova-plugin-network-information": {},
-      "cordova-plugin-document-viewer": {}
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "android"
