--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -305,6 +305,7 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging:18.0.0"
     implementation "com.android.support:support-annotations:27.+"
     implementation "com.android.support:appcompat-v7:23+"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     // SUB-PROJECT DEPENDENCIES END
 }
 
