--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -24,3 +24,4 @@ cordova.gradle.include.3=cordova-plugin-telerik-imagepicker/merchant-ignorelinte
 cordova.gradle.include.4=cordova-plugin-telerik-imagepicker/merchant-androidtarget.gradle
 cordova.gradle.include.5=phonegap-plugin-barcodescanner/merchant-barcodescanner.gradle
 cordova.system.library.8=com.android.support:support-v4:27.+
+cordova.system.library.9=androidx.legacy:legacy-support-v4:1.0.0
